src/test/run-pass/multi-src/foo.rs
fn main() {
  log "hello, multi-file world.";
  bar::other();
}