src/test/compile-fail/direct-obj-fn-call.rs

// error-pattern: is not a mod

obj x() {
  fn hello() {
    log "hello";
  }
}

fn main() {
  x.hello();
}